--- a/.github/workflows/provisioning.yml
+++ b/.github/workflows/provisioning.yml
@@ -4,7 +4,7 @@ on:
     branches:
       - master
 jobs:
-  echo:
+  provisioning:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@master
@@ -13,5 +13,4 @@ jobs:
         access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         region: us-east-1
-        variables: var=${{ github.sha }}
         path: aws
